Fix spacing

--- a/src/web/assets/frontend/src/scss/forms/_field.scss
+++ b/src/web/assets/frontend/src/scss/forms/_field.scss
@@ -122,6 +122,6 @@
 // ReCAPTCHA
 // ==========================================================================
 
-.formie-recaptcha-placeholder > * {
+.formie-recaptcha-placeholder > div > * {
     margin-top: 1rem;
 }
